--- a/cdm_water_biogeochemistry.Rmd
+++ b/cdm_water_biogeochemistry.Rmd
@@ -18,7 +18,7 @@ Therefore, whilst the base AED model platform being used in previous model versi
 
 ### Background
 
-Dissolved Oxygen ($DO$) dynamics respond to processes of atmospheric exchange, sediment oxygen demand, microbial use during organic matter mineralisation and nitrification, photosynthetic oxygen production and respiratory oxygen consumption, chemical oxygen demand and respiration by other biotic components. In general, within the Coorong, dissolved oxygen levels are affected by salinity and temperature changes, which control oxygen solubility. In the South Lagoon however, enriched sediments create a large sediment oxygen demand ($SOD$), which can casue a temporary sag in the oxygen saturation levels, particualr under quiescent codnitions when wind mixing is unable to replenish low oxugen in the bottom waters. Superimposed on this is the often patchy photosynthetic inputs of oxygen by phytoplankton and filamentous macroalgae, and their subsequent high respiratory demands under dark conditions. 
+Dissolved Oxygen ($DO$) dynamics respond to processes of atmospheric exchange, sediment oxygen demand, microbial use during organic matter mineralisation and nitrification, photosynthetic oxygen production and respiratory oxygen consumption, chemical oxygen demand and respiration by other biotic components. In general, within the Coorong, dissolved oxygen levels are affected by salinity and temperature changes, which control oxygen solubility. In the South Lagoon however, enriched sediments create a large sediment oxygen demand ($SOD$), which can casue a temporary sag in the oxygen saturation levels, particualr under quiescent conditions when wind mixing is unable to replenish low oxugen in the bottom waters. Superimposed on this is the often patchy photosynthetic inputs of oxygen by phytoplankton and filamentous macroalgae, and their subsequent high respiratory demands under dark conditions. 
 
 ### Model setup
 
@@ -73,9 +73,17 @@ The predictions of oxygen concentrations for the main calibration (2020-2021) an
 
 ### Background
 
+Nutrient retention in the Coorong lagoon is currently a core management driver, linked to habitat quality and a key target of proposed management interventions. Recent analysis of the available historical nutrient data across the lagoon has shown the sharp gradients in nutrient species, and often high levels of nutrients in the South Lagoon in particular (Mosley et al., 202X). Furthermore, process investigations have elucidated the high rates of benthic metabolism and rates of productivity, contributing to a system with intensively cycled materials between ecosystem pools. Yet, we currently have only a limited understanding of the nutrient budget within the lagoons and the hydrodynamic and biogeochemical controls on elemental cycling. In this section, we outline the model setup and approach to parameterisation and parameter selection for the key pools and processes relevant to the Coorong.
+
 ### Model setup
 
-#### General approach
+#### General approach {.unnumbered}
+
+The CDM approach to simulate nutrients includes the [nitrogen](https://aquaticecodynamics.github.io/aed-science/inorganic-nitrogen.html), [phosphorus](https://aquaticecodynamics.github.io/aed-science/inorganic-phosphorus.html), [silica](https://aquaticecodynamics.github.io/aed-science/silica.html) and [organic matter](https://aquaticecodynamics.github.io/aed-science/organic-matter.html) modules within AED. Both the inorganic and organic, and dissolved and particulate forms of C, N and P are modelled explicitly along the general degradation pathway of POM to DOM to dissolved inorganic matter (DIM), however the need for discrete OM pools is elaborated upon below. The nitrogen cycle includes the additional processes of denitrification and nitrification that are not in the carbon and phosphorus cycles.
+
+An 8-pool organic matter module able to capture the variable reactivity of the OM pool and its stoichiometry is included. Under this conceptual model the decomposition of particulate detrital material is broken down through a process of enzymatic hydrolysis that slowly converts POM to labile DOM. A small fraction, f_ref, of this material is diverted to the DOM-R pool. The bioavailable DOM material enters the bacterial terminal metabolism pathways. These are active depending on the ambient oxygen concentrations and presence of electron acceptors, and of most relevance to the reservoirs, these pathways aerobic breakdown, denitrification, sulfate reduction, and methanogenesis. In most model approaches it is assumed these communities vary in response to temperature, and are mediated using a simple oxygen dependence or limitation factor. Reoxidation of reduced by-products is also included to account the role of nitrifiers, sulfate oxidising bacteria (SOB) and methane oxidising bacteria (MOB). 
+
+Filterable reactive phosphorus also is known to adsorb onto suspended solids (SS), however, the rate is often site specific. Particulate organic matter in that deposits into the sediment may also be resuspended back into the water column when the bottom shear stress is adequate. In addition to the normal process descriptions included in the AED modules summarised above, several adjustments were made during the Coorong application, as dsicussed next.
 
 #### Impact of hypersalinity on nitrification and denitrification {.unnumbered}
 
@@ -94,7 +102,7 @@ knitr::include_graphics("images/dev/water/salinity_denitrification.png")
 
 #### Impact of salinity and temperature on phosphorus adsorption-desorption {.unnumbered}
 
-Because of low solubility of P-bearing minerals in the earth's crust and a strong affinity of dissolved phosphate to adsorb on the solid surfaces, sediment, including suspended particles, has been identified as the dominant P reservoir in both freshwater and coastal marine environments. Suspended particles are able to adsorb or desorb phosphate in the water, depending on the sediment phosphorus contents and a range of environmental conditions. Adsorption can vary considerably along a salinity gradient (Sundareshwar and Morris, 1999; Zhang and Huang, 2011) as well as affected by the temperature (Zhang and Huang, 2011). For this process adoption of the algorithm, as implemented by Zhang and Huang, 2011, is a convenient method. In this method, the PO4 adsorption capability ($K_{PO4-P}$), defined as the ratio of PO4 concentration in the particles and water per mg of suspended particles, is calculated as:
+Because of low solubility of P-bearing minerals in the earth's crust and a strong affinity of dissolved phosphate to adsorb on the solid surfaces, sediment, including suspended particles, has been identified as the dominant P reservoir in both freshwater and coastal marine environments. Suspended particles are able to adsorb or desorb phosphate in the water, depending on the sediment phosphorus contents and a range of environmental conditions. Adsorption can vary considerably along a salinity gradient (Sundareshwar and Morris, 1999; Zhang and Huang, 2011) as well as affected by the temperature (Zhang and Huang, 2011). For this process adoption of the algorithm, as implemented by Zhang and Huang, 2011, is a convenient method. In this method, the PO4 adsorption capability ($K_{PO4-P}$), defined as the ratio of $PO_4$ concentration in the particles and water per mg of suspended particles, is calculated as:
 
 <center>
 
@@ -107,16 +115,26 @@ K_{PO4-P} = (60- [EPC]_0)/(100 ×[EPC]_0)
 
 </center>
 
-where the $[EPC]_0$ is the equilibrium PO4 concentration in the water and is a function of the exchangeable PO4 content in the particle $P_{exch}$, calculated as:
+where the $[EPC]_0$ is the equilibrium $PO_4$ concentration in the water and is a function of the exchangeable $PO_4$ content in the particle $P_{exch}$, calculated as:
 
-K_(PO4-P)=A×P_exch+B×P_exch^2
+```{=tex}
+\begin{equation}
+[EPC]_0 = A × P_{exch} +B×P_{exch}^2
+(\#eq:watereq2)
+\end{equation}
+```
 
-where A and B in Eq() are coefficients as a function of salinity and temperature through multiparameter regression analysis from their laboratory experiments as:
+where $A$ and $B$ in Eq \@ref(eq:watereq2) are coefficients as a function of salinity and temperature through multi-parameter regression analysis from laboratory experiments as:
 
-A=-140.5+1098.2/t+30.67×ln⁡(t)+0.0907×S
-B=1225.96-6880.49/t-278.77×ln⁡(t)+0.4561×S
+```{=tex}
+\begin{equation}
+A=-140.5+1098.2/T+30.67× ln(T)+0.0907×S \\
+B=1225.96-6880.49/T-278.77×ln(T))+0.4561×S
+(\#eq:watereq3)
+\end{equation}
+```
 
-where t is the water temperature in °C, S is the salinity in PSU. In the Coorong, the P_exch is estimated as 0.78 µmol P/g from the field survey data (Mosley et al., 2020). The resulting PO4 adsorption capability under a range of temperature and salinity is shown graphically in Figure \@ref(fig:water-sal2).
+where $T$ is the water temperature in °C, $S$ is the salinity in PSU. In the Coorong, the $P_{exch}$ is estimated as 0.78 µmol P/g from the field survey data (Mosley et al., 2020). The resulting $PO4$ adsorption capability under a range of temperature and salinity is shown graphically in Figure \@ref(fig:water-sal2).
 
 ```{r water-sal2, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Response of the adsorption capability of phosphorus of suspended particles to water temperature and salinity."}
 
@@ -126,23 +144,91 @@ knitr::include_graphics("images/dev/water/salinity_p_adsorption.png")
 
 #### Nutrient flux at the sediment-water interface (SWI) {.unnumbered}
 
-One of the key drivers of estuarine water quality is the sediment biogeochemical processes and the exchange of nutrient at the SWI (Crowe et al., 2012). In shallow waters, hydrodynamics and diffusion have been regarded as the crucial factors to dominate the nutrients release. More specifically, two modes are responsible for nutrients release from sediment layers to overlying water, i.e., static release by nutrient diffusion in relatively calm situation caused by concentration gradient, and dynamic release accompanied by hydrodynamic-induced sediment resuspension in the shallow lake (Qin et al., 2006, Tengberg et al., 2003). In open water where the fetch is long, in particular, the dynamic release is the dominant mode in the actual situations since the water-sediment interface is frequently disturbed by the hydrodynamic process (Qin et al., 2006). Fan et al. (2001) have claimed that the internal phosphorus (P) load induced by resuspension was 8–10 times larger than the static release, while Reddy et al. (1996) have reported that ammonia concentration increased ten times in the overlying water caused by resuspension compared with gradient diffusion. Besides, it is also found that internal P from sediment resuspension resulting from moderate wind could be comparable in magnitude to the daily external supply (Gelencser and Szilagyi, 1982). Thus, the disturbance at the water-sediment layer induced by wind can significantly affect SS and nutrients behaviors in the lake ecosystem (Huang et al., 2016).
+One of the key drivers of lagoon water quality is the sediment biogeochemical processes and the exchange of nutrient at the SWI (Crowe et al., 2012). In shallow waters, hydrodynamics and diffusion have been regarded as the crucial factors to dominate the rate of sediment nutrient release. More specifically, two modes are responsible for nutrient release from sediment layers to overlying water: static release by nutrient diffusion in relatively calm situations as driven by a concentration gradient, and dynamic release accompanied by hydrodynamic-induced sediment resuspension (Qin et al., 2006, Tengberg et al., 2003). In open water where the fetch is long, in particular, the dynamic release can be the dominant mode since the water-sediment interface is frequently disturbed by  hydrodynamic processes (Qin et al., 2006). Fan et al. (2001) have claimed that the internal phosphorus (P) load induced by resuspension was 8–10 times larger than the static release, while Reddy et al. (1996) have reported that ammonia concentration increased ten times in the overlying water caused by resuspension compared with gradient diffusion. It is also found that internal P from sediment resuspension resulting from moderate wind could be comparable in magnitude to the daily external supply (Gelencser and Szilagyi, 1982). Thus, the disturbance at the water-sediment layer induced by wind can significantly affect SS and nutrient behaviors in shallow aquatic ecosystems (Huang et al., 2016).
 
-Resuspension led to increase of suspended solids (including POC) in the overlying water, but the impacts on the dissolved nutrient is depending on many factors. Tengler et al (2003) showed the resuspension lead to increase flux of nitrate, but decrease of PO4 and no change of NH4. Similarly, Tengberg et al. (2003) and Sondergaard et al. (1992) found that resuspension can led to either higher or lower concentration of phosphate in the overlying water, depending the iron level of the suspended solids. Furthermore, the effects of resuspension on the long-term nitrogen and phosphorus liberation may be mild. Sloth et al. (1996) showed small changes in nutrient fluxes in the laboratory study, and the measured parameters of a marine system returned to the condition before the resuspension events. Blackburn (1997) also stated that natural resuspension does not significantly contribute to a long-term change of sediment nitrogen release. The nitrogen release with or without resuspension is just a matter of time, that is a sudden or a gradual release but to the same extent.
+Resuspension leads to a predictable increase of suspended solids (including POC) in the overlying water, but the impacts on the dissolved nutrient release rate depends on many factors. Tengler et al (2003) showed the resuspension led to an increase flux of NO3, but decrease of PO4 and no change of NH4. Similarly, Tengberg et al. (2003) and Sondergaard et al. (1992) found that resuspension can led to either higher or lower concentration of phosphate in the overlying water, depending the iron level of the suspended solids. Furthermore, the effects of resuspension on the long-term nitrogen and phosphorus liberation may be mild. Sloth et al. (1996) showed small changes in nutrient fluxes in the laboratory study, and the measured parameters of a marine system returned to the condition before the resuspension events. Blackburn (1997) also stated that natural resuspension does not significantly contribute to a long-term change of sediment nitrogen release. The nitrogen release with or without resuspension is just a matter of time, that is a sudden or a gradual release but to the same extent.
 
-In the Coorong, the effects of wind-induced resuspension on the nutrient release in the Coorong is relatively mild. In the field survey of waves and resuspension in the Coorong, there was no significant change in nutrient levels due to resuspension. Total nutrient concentrations did not show a consistent relationship to any other variables and TN and TP had a moderately negative relationship to each other. Dissolved nutrient concentrations were consistently below minimum detectable levels. This is probably due to the major components of N/P released by resuspension was the particulate forms (Tang et al., 2020); also, the sediment experiment showed a strong diffusive nutrient flux of NH4 and PO4 under calm condition, which indicate the diffusive flux of nutrient is the major process of sediment release in the Coorong. The major components of TSS in the Coorong was found to be phytoplankton, where the inorganic suspended particles contributed relatively small to the TSS.
+In the Coorong, the effects of wind-induced resuspension on the nutrient release in the Coorong may be relatively mild. In the field survey of waves and resuspension in the Coorong, there was no significant change in nutrient levels due to resuspension. Total nutrient concentrations did not show a consistent relationship to any other variables and TN and TP had a moderately negative relationship to each other. Dissolved nutrient concentrations were consistently below minimum detectable levels. This is probably due to the major components of N/P released by resuspension was the particulate forms (Tang et al., 2020); also, the sediment experiment showed a strong diffusive nutrient flux of NH4 and PO4 under calm condition, which indicate the diffusive flux of nutrient is the major process of sediment release in the Coorong. The major components of TSS in the Coorong was found to be phytoplankton, where the inorganic suspended particles contributed relatively small to the TSS.
 
-Therefore, in the CDM generation one the “static” sediment flux algorithm is adopted that is suited to long-term studies and assumed the OM concentration is thought to be relatively stable. The sediment oxygen demand and nutrient flux rates were set based on the sediment flux data from the site of Parnka Point (Table 2.4, Mosley et al., 2020) which were then interpolated into the zones based on the sediment particle sizes and organic matter contents, following a role of thumb that the oxygen demand and nutrient flux increased with the organic matter contents.
+Therefore, in the CDM generation one the “static” sediment flux algorithm is adopted that is suited to long-term studies and assumed the OM concentration is thought to be relatively stable. The sediment oxygen demand and nutrient flux rates were set based on the sediment flux data from the site of Parnka Point (Table \@ref(tab:5-sedpars)) which were then interpolated into the zones based on the sediment particle sizes and organic matter contents, following a role of thumb that the oxygen demand and nutrient flux increased with the organic matter contents  (Table \@ref(tab:5-zonepars)).
+
+<br>
+
+```{r 5-sedpars, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/water/sediment_flux.xlsx', sheet = 3)
+theSheet <- theSheet[theSheet$Table == "Data",]
+theSheetGroups <- unique(theSheet$Group)
+
+for(i in seq_along(theSheet$Units)){
+  if(!is.na(theSheet$Units[i])==TRUE){
+    theSheet$Units[i] <- paste0("$$",theSheet$Units[i],"$$")
+  } else {
+    theSheet$Units[i] <- NA
+  }
+}
+
+kbl(theSheet[,3:6], caption = "Summary of dissolved sediment flux data collected within the Coorong (HCHB T&I 1) and used in the CDM model.", align = "l",) %>%
+  pack_rows(theSheetGroups[1],
+            min(which(theSheet$Group == theSheetGroups[1])),
+            max(which(theSheet$Group == theSheetGroups[1])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[2],
+            min(which(theSheet$Group == theSheetGroups[2])),
+            max(which(theSheet$Group == theSheetGroups[2])),
+            background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[3],
+          min(which(theSheet$Group == theSheetGroups[3])),
+          max(which(theSheet$Group == theSheetGroups[3])),
+          background = '#ebebeb') %>%
+  pack_rows(theSheetGroups[4],
+          min(which(theSheet$Group == theSheetGroups[4])),
+          max(which(theSheet$Group == theSheetGroups[4])),
+          background = '#ebebeb') %>%
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 11) %>%
+  scroll_box(fixed_thead = FALSE)
+```
+
+<br>
+
+These sediment flux parameters serve as the default values used in the intial simulations. When the model is run with the dynamic sediment biogeochemistry model this fluxes in the tables are not used as input parameters, but rather as guides for validation of the predicted rates - see Chapter 9 for further detail about the dynamic prediction of sediment nutrient fluxes. 
+
+<br>
+
+```{r 5-zonepars, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/water/sediment_flux.xlsx', sheet = 4)
+theSheet <- theSheet[theSheet$Table == "Data",]
+
+kbl(theSheet[,2:7], caption = "Summary of sediment oxygen demand and nutrient fluxes setting in the CDM with 31 material zones.", align = "l",escape = F, ) %>%
+
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 11) %>%
+  scroll_box(fixed_thead = FALSE)
+```
+
+<br>
 
 #### Parameter summary {.unnumbered}
+
+A summary of the overall model parameters used within the CDM simulations related to nutrient dynamics are summarised below in Table X. 
 
 
 ### Model results
 
+The results of the integrated assessment for the final calibrated model are shown in Chapter 7.
+
 
 <br>
 
-<!-- -->
+<!-- ------------------- -->
 ## Phytoplankton & Chlorophyll-a
 
 ### Background
@@ -185,7 +271,7 @@ library(knitr)
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
-theSheet <- read_excel('tables/phytoplankton_parameters.xlsx', sheet = 1)
+theSheet <- read_excel('tables/water/phytoplankton_parameters.xlsx', sheet = 1)
 theSheet <- theSheet[theSheet$Table == "Parameter",]
 theSheetGroups <- unique(theSheet$Group)
 
@@ -277,10 +363,126 @@ The approach to simulate the biomass of benthic microalgae (microphytobenthos) i
 
 The $MPB$ pool configured to simulate the biomass is configured according to the parameters outlined in Table (Table \@ref(tab:5-mpbpars)). 
 
+<br>
+
+```{r 5-mpbpars, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/water/phytoplankton_parameters.xlsx', sheet = 1)
+theSheet <- theSheet[theSheet$Table == "Microphytobenthos",]
+theSheetGroups <- unique(theSheet$Group)
+
+for(i in seq_along(theSheet$Parameter)){
+  if(!is.na(theSheet$Parameter[i])==TRUE){
+    theSheet$Parameter[i] <- paste0("$$",theSheet$Parameter[i],"$$")
+  } else {
+    theSheet$Parameter[i] <- NA
+  }
+}
+for(i in seq_along(theSheet$Unit)){
+  if(!is.na(theSheet$Unit[i])==TRUE){
+    theSheet$Unit[i] <- paste0("$$\\small{",theSheet$Unit[i],"}$$")
+  } else {
+    theSheet$Unit[i] <- NA
+  }
+}
+
+kbl(theSheet[,3:6], caption = "Summary of the microphytobenthos parameters used in the CDM version of the AED model.", align = "l",) %>%
+  pack_rows(theSheetGroups[1],
+            min(which(theSheet$Group == theSheetGroups[1])),
+            max(which(theSheet$Group == theSheetGroups[1])),
+            background = '#ebebeb') %>%
+
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = F,font_size = 10) %>%
+  column_spec(2, width_min = "15em") %>%
+  column_spec(3, width_max = "20em") %>%
+  column_spec(4, width_min = "20em") %>%
+    scroll_box(width = "680px", height = "700px",
+             fixed_thead = FALSE)
+```
+
+
+<br>
+
 
 ### Model results
 
 <br>
+
+
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: #2481AA;
+  float: left;
+  width: 50%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+</style>
+</head>
+<body>
+
+<div class="tab">
+  <button class="tablinks" onclick="opentab(event, 'AED-water')"id="defaultOpen">AED-water</button>
+  <button class="tablinks" onclick="opentab(event, 'AED-benthic')">AED-benthic</button>
+</div>
+
+<div id="AED-water" class="tabcontent">
+  <p>
+
+```{r water-sal6, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Salinity limitation curves applied to the photosynthesis rate of each phytoplankton group to acheive the phytoplankton group zonation reported in the literature."}
+
+knitr::include_graphics("images/dev/water/salinity_phytoplankton.jpg")
+
+```
+
+  </p>
+</div>
+
+<div id="AED-benthic" class="tabcontent">
+  <p>
+
+```{r water-sal7, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Salinity limitation curves applied to the photosynthesis rate of each phytoplankton group to acheive the phytoplankton group zonation reported in the literature."}
+
+knitr::include_graphics("images/dev/water/salinity_phytoplankton.jpg")
+
+```
+
+  </p>
+</div>
+
+<script>
+function opentab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(tabName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+document.getElementById("defaultOpen").click();
+</script>
+
+</body>
+
 
 
 <!-- -->
